# hzip-rs

./: Cargo.toml
src/: lib.rs
src/connection/: connection.rs
src/control/: algorithm.rs  api.rs  control.rs  mod.rs  query.rs  stream.rs
src/handlers/: handshake.rs  mod.rs  query.rs  session.rs  stream.rs
src/utils/: common.rs  mod.rs  parser.rs
tests/: handshake.rs  query.rs  stream.rs
