[package]
name = "hzip"
version = "0.1.0"
authors = ["supercmmetry <vishaals2000@gmail.com>"]
edition = "2018"
description = "A hybridzip client driver for rust"
repository = "https://github.com/hybridzip/hzip-rs"


[dependencies]
anyhow = "1.0.33"
byteorder = "1.3.4"
num-traits = "0.2.12"
num-derive = "0.3.2"

[dev-dependencies]
hzip = {path = "."}

[[test]]
name = "handshake"
path = "tests/handshake.rs"
